# Odyssey

./: Dockerfile  README.md  iv.yaml  pyproject.toml  task.py  tasks.py
.github/workflows/: build.yml  testversion.yml
circleci/: config.yml
docs/: IntegraciónContinua.md  docker.md  gestorTareas.md  historias-usuario.md  info.txt  lenguaje.md  materialAdicional.txt  task_runner.md  test.md
fuel_station/: fuel_station.py  trabajador.py  viajero.py
src/: enumerators.py  fuel_station.py  module.py
test/: testRutaOptima.py  testTrabajador.py  testViajero.py  trabajadores.txt  viajeros.txt
