[tool.poetry]
name = "odyssey_app"
version = "1.15"
description = "Calculador de rutas eficientes"
authors = ["Jose Vilchez"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "==3.8.10"

[tool.poetry.dev-dependencies]
invoke = "^1.6.0"
pytest = "^6.2.5"
pyflakes = "^2.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
