[tool.poetry]
name = "odyssey"
version = "0.7"
description = "Calcula la ruta más óptima para el repostaje de gasolina en un viaje"
authors = ["jose <josevilchez4@correo.ugr.es>"]

[tool.poetry.dependencies]
python = ">=3.7,<4.0.0"

[tool.poetry.dev-dependencies]
poethepoet = "^0.11.0"
pytest = "^6.2.5"
assertpy = "^1.1"

[tool.poetry.plugins."poetry.application.plugin"]
poethepoet = "poethepoet.plugin:PoetryPlugin"

[tool.poe.tasks]

   [tool.poe.tasks.test]
   help = "Run unit and feature tests"
   cmd  = "pytest --cov=poethepoet"

[build-system]
requires      = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
