[tool.poetry]
name = "odyssey"
version = "0.7"
description = "Calcula la ruta m치s 칩ptima para el repostaje de gasolina en un viaje"
authors = ["jose <josevilchez4@correo.ugr.es>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
poethepoet = "^0.10.0"
pytest = "^6.2.5"
assertpy = "^1.1"

[tool.poe.tasks]
install         = {cmd="python3 odyssey/*.py", help="Instala las distintas clases o m칩dulos que tenga el proyecto"}
installdeps     = {cmd="poetry install", help="Instala las dependencias necesarias para que la aplicaci칩n funcione"}
pytest          = {cmd="pytest -p no:cacheprovider", help="Comprueba que el resultado(comportamiento) del programa sin fase de Teardown"}
check           = {cmd="py3compile odyssey/*.py", help="Comprueba la sintaxis de los ficheros python"}
test            = ["pytest", "clean"]
clean           = {cmd="rm -rf .pytest_cache ./**/__pycache__ ./**/__init__.pyc"}

[build-system]
requires      = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
